Remove ignore duplicated entries

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
-manta/__pycache__/__init__.cpython-37.pyc
-manta/__pycache__/messages.cpython-37.pyc
-manta/__pycache__/payproclib.cpython-37.pyc
-manta/__pycache__/storelib.cpython-37.pyc
-tests/.pytest_cache/v/cache/lastfailed
-tests/.pytest_cache/v/cache/nodeids
-tests/.pytest_cache/README.md
-tests/__pycache__/utils.cpython-37.pyc
-manta/__pycache__
-notebooks/.ipynb_checkpoints
-.python-version
 .DS_Store
 .dmypy.json
 .idea
+.ipynb_checkpoints
 .mypy_cache
 .pyre
-.vscode
-manta.egg-info
 .pytest_cache
-tests/__pycache__
+.python-version
+.vscode
 Untitled.ipynb
+__pycache__
+manta.egg-info
