--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,3 @@
 [mypy]
-[mypy-paho.*,cryptography.*,cattr.*,certvalidator.*]
+[mypy-paho.*,cryptography.*,cattr.*,certvalidator.*,file_config.*,inquirer.*,nano.*]
 ignore_missing_imports = True
